# Undergraduate

./: README-en.md  README.md
Andrew-Machine-Learning/: readme.md
Java程序设计与训练/JAVA对类的认知/: homework2.docx  info.txt
Java程序设计与训练/JAVA文件读写/: info.txt  第三次作业.docx
Java程序设计与训练/JAVA线程与网络/: info.txt  第五次作业.docx
Java程序设计与训练/大作业：新闻APP/: info.txt  readme.md
cs231n/: readme.md
cs294-112/: readme.md
人工神经网络/: readme.md
信号处理原理/第一次课作业/: info.txt
信号处理原理/第七次作业/: info.txt
信号处理原理/第三次课作业/: info.txt
信号处理原理/第九次作业-编程/: info.txt
信号处理原理/第二次课作业/: info.txt
信号处理原理/第五次作业/: info.txt
信号处理原理/第八次作业/: info.txt
信号处理原理/第六次作业/: info.txt
信号处理原理/第十一次作业/: info.txt
信号处理原理/第十二次作业/: info.txt
信号处理原理/第十次作业/: info.txt
信号处理原理/第四次作业/: info.txt
操作系统/: readme.md
数值分析/: main.py  report.md  t11.py  t13.cpp  t22.py  t23.py  t36.py  t42.py  t51.py  t53.py  t54.py
数据库专题训练/: readme.md  rejudge.py
数据库专题训练/SimJoiner/: SimJoiner.cpp  SimJoiner.h  main.cpp  submit.sh
数据库专题训练/SimSearcher/: SimSearcher.cpp  SimSearcher.h  main.cpp  submit.sh
数据库专题训练/Taxi/: .gitignore  (+2 more)
编译原理/: readme.md
计算机图形学基础/: readme.md
计算机组成原理/: readme.md
计算机网络原理/: .~路由器开发实验20181007_361806096.pptx  readme.md
面向对象程序设计基础/TeamProject/oop_team_project_2017/project/src/: CMakeLists.txt  main.cpp  path.cpp  path.h  route.cpp  route.h  vertex.h  visualization.cpp  visualization.h
面向对象程序设计基础/TeamProject/oop_team_project_2017/project/src/route_impl/: grid_size_constants.h  route_input_adapter.cpp  route_input_adapter.h  route_network_flow.cpp  route_network_flow.h  route_rule_based.cpp  route_rule_based.h
(+197 files in other folders)
